cleaning up, updating docstrings, tests and examples

--- a/examples/simple_examples/monte_carlo.ipynb
+++ b/examples/simple_examples/monte_carlo.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "def mc_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Initialise the system placing the particles on a square lattice\n",
-    "    system = mc.initialise(number_of_particles, temperature, box_length, 'square')\n",
+    "    constants=[[1.363e-134, 9.273e-78],[1.363e-134, 9.273e-78]]\n",
+    "    system = mc.initialise(number_of_particles, temperature, box_length, 'square', constants=constants, mixing = False)\n",
     "    # This sets the sampling class as Energy, which shows the energy of the system\n",
     "    sample_system = sample.Energy(system)\n",
     "    # Compute the energy of the system\n",
@@ -71,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = mc_simulation(100, 273.15, 45, 5000, 25)"
+    "system = mc_simulation(50, 273.15, 45, 1000, 25)"
    ]
   },
   {
@@ -105,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
