--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "from pylj import md, sample\n",
+    "from pylj import md, sample, pairwise\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
@@ -23,7 +23,8 @@
    "source": [
     "def md_simulation(number_of_particles, temperature, box_length, number_of_steps, sample_frequency):\n",
     "    # Initialise the system\n",
-    "    system = md.initialise(number_of_particles, temperature, box_length, 'square')\n",
+    "    constants=[[1.363e-134, 9.273e-78],[1.365e-130, 9.278e-77],[1.368e-130, 9.278e-77]]\n",
+    "    system = md.initialise(number_of_particles, temperature, box_length, 'square', constants=constants)\n",
     "    # This sets the sampling class\n",
     "    sample_system = sample.MaxBolt(system)# Start at time 0\n",
     "    system.time = 0\n",
@@ -63,8 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_simulation(20, 1000, 100, 5000, 100)"
+    "system = md_simulation(20, 1000, 100, 2500, 50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -90,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
