fixing minor print message mistkae

--- a/examples/simple_examples/molecular_dynamics.ipynb
+++ b/examples/simple_examples/molecular_dynamics.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "from pylj import md, sample, pairwise\n",
+    "from pylj import md, sample\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import time\n",
